2005-01-10  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/syscall.c: Make rt_task_delete() a regular context
	syscall.

2005-01-09  Philippe Gerum  <rpm@xenomai.org>

	* arch/ppc/hal/hal.c (rthal_calibrate_timer): Stop using
	rthal_llimd() uselessly.

	* include/nucleus/intr.h: Move the ISR return codes to the
	context-independent section, so that they are also visible from
	user-space.

2005-01-08  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-*/system.h (xnarch_init): Fix the error
	return path to prevent bad system lockup if the calibration
	happens to fail.

	* drivers/16550A: Preliminary version of a simple 16550A UART
	driver based on the native interface.

	* skins/rtai: Use DECLARE_XNQUEUE() where applicable.

	* skins/rtai/intr.c (__intr_trampoline): Allow for immediate ISR
	processing from kernel space only, in addition to the task-based
	DSR mode available both in kernel and user-space contexts.

2005-01-05  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/sem.c (rt_sem_v): Add pulse mode.

2005-01-06  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* include/nucleus/asm-ppc/hal.h : rework 64 bits arithmetic
	operations.

2005-01-04  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/lib/init.c (__init_skin): Do not set the global
	interface identifier variable with random error codes.

2005-01-03  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/module.c: Rework /proc interface. Provide
	/proc/rtai/latency to dynamically read/update the scheduling
	latency value. Scatter old interface sections from rtai/rthal and
	rtai/system to per-topic individual entries.

	* nucleus/pod.c (xnpod_set_thread_periodic): Passing XN_INFINITE
	as the period just stops any undergoing timing.

	* nucleus/lib/fusion.c (pthread_ticks2ns_t, pthread_ns2ticks_rt):
	Discard useless and confusing routines using nanoseconds as
	input/output values in oneshot mode.

	* skins/rtai/intr.c: Add interrupt management API.
